tests/istio_testcases/example_policies/fly-istio-ingress-test/resources/fly-deployment.yaml
apiVersion: v1
kind: ReplicationController
metadata:
  name: fly-api
spec:
  replicas: 1
  selector:
    app: fly-api
  template:
    metadata:
      name: fly-api
      labels:
        app: fly-api
    spec:
      containers:
      - name: fly-api
        image: erangaeb/fly-api:0.1
        env:
          - name: SERVICE_NAME
            value: fly-api
          - name: SERVICE_PORT
            value: "8761"
        ports:
        - containerPort: 8761

---
apiVersion: v1
kind: ReplicationController
metadata:
  name: hora-api
spec:
  replicas: 1
  selector:
    app: hora-api
  template:
    metadata:
      name: hora-api
      labels:
        app: hora-api
    spec:
      containers:
      - name: hora-api
        image: erangaeb/hora-api:0.1
        env:
          - name: SERVICE_NAME
            value: hora-api
          - name: SERVICE_PORT
            value: "8762"
        ports:
        - containerPort: 8762
