tests/istio_testcases/example_policies/fly-istio-ingress-test/resources/istio-ingress-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-ingressgateway
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway
  template:
    metadata:
      annotations:
        inject.istio.io/templates: gateway
      labels:
        app: istio-ingressgateway
    spec:
      containers:
      - name: istio-proxy
        image: auto
